<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>summer</groupId>
    <artifactId>summer-framework</artifactId>
    <version>0.1.0</version>
    <packaging>pom</packaging>

    <name>Summer Framework</name>
    <description>A minimal, chain-oriented micro framework for building CRUD APIs on modern JDK</description>
    <url>https://github.com/your-username/summer</url>

    <properties>
        <java.version>25</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>summer-core</module>
        <module>summer-web</module>
        <module>summer-aop</module>
        <module>summer-tx</module>
        <module>summer-validation-hv</module>
        <module>summer-example</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- Summer Modules -->
            <dependency>
                <groupId>summer</groupId>
                <artifactId>summer-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>summer</groupId>
                <artifactId>summer-web</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>summer</groupId>
                <artifactId>summer-aop</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>summer</groupId>
                <artifactId>summer-tx</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>summer</groupId>
                <artifactId>summer-validation-hv</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Jackson for JSON binding -->
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>2.17.2</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.datatype</groupId>
                <artifactId>jackson-datatype-jsr310</artifactId>
                <version>2.17.2</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.dataformat</groupId>
                <artifactId>jackson-dataformat-yaml</artifactId>
                <version>2.17.2</version>
            </dependency>

            <!-- Testing -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>5.10.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>5.4.0</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <!-- Add Spotless for static analysis and formatting -->
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.43.0</version>
                <configuration>
                    <java>
                        <!-- Eclipse JDT Formatter (independent of javac internals, works on JDK 25) -->
                        <eclipse>
                            <version>4.26</version>
                        </eclipse>
                        <!-- Automatically remove all unused imports -->
                        <removeUnusedImports />
                        <!-- Enforce consistent import ordering -->
                        <importOrder />
                    </java>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>maven-releases</id>
            <name>Maven Releases</name>
            <url>https://your-repository/releases</url>
        </repository>
        <snapshotRepository>
            <id>maven-snapshots</id>
            <name>Maven Snapshots</name>
            <url>https://your-repository/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>